--- a/Beehive/Classes/Modules/Mine/LLBeeMineViewController.xib
+++ b/Beehive/Classes/Modules/Mine/LLBeeMineViewController.xib
@@ -22,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="T4e-7g-Kwb">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8V3-c5-ELE">
                         <size key="itemSize" width="50" height="50"/>
@@ -40,7 +40,7 @@
             <constraints>
                 <constraint firstItem="T4e-7g-Kwb" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="K8w-72-1hN"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="T4e-7g-Kwb" secondAttribute="bottom" id="YOF-UK-DLF"/>
-                <constraint firstItem="T4e-7g-Kwb" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="bzF-QS-T7L"/>
+                <constraint firstItem="T4e-7g-Kwb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="bzF-QS-T7L"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="T4e-7g-Kwb" secondAttribute="trailing" id="fJQ-bA-ygm"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
