--- a/Beehive/Classes/Modules/Mine/View/LLMineCollectionViewCell.xib
+++ b/Beehive/Classes/Modules/Mine/View/LLMineCollectionViewCell.xib
@@ -1,21 +1,65 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="LLMineCollectionViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="LLMineCollectionViewCell" id="gTV-IL-0wX" customClass="LLMineCollectionViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="94" height="70"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="94" height="70"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="钱包" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tq2-jJ-go9">
+                        <rect key="frame" x="34.5" y="39" width="25" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0UJ-dq-R3Y">
+                        <rect key="frame" x="0.0" y="69.5" width="94" height="0.5"/>
+                        <color key="backgroundColor" red="0.88235294117647056" green="0.88235294117647056" blue="0.88235294117647056" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="0.5" id="YgL-xH-AuA"/>
+                        </constraints>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="5_0.7" translatesAutoresizingMaskIntoConstraints="NO" id="XuU-NE-lVs">
+                        <rect key="frame" x="36.5" y="12" width="21" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="f9r-MH-n7x"/>
+                            <constraint firstAttribute="width" constant="21" id="y4W-5o-kFi"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
             </view>
+            <constraints>
+                <constraint firstItem="tq2-jJ-go9" firstAttribute="top" secondItem="XuU-NE-lVs" secondAttribute="bottom" constant="6" id="14F-kQ-raT"/>
+                <constraint firstItem="0UJ-dq-R3Y" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="5dm-nO-CN4"/>
+                <constraint firstAttribute="bottom" secondItem="0UJ-dq-R3Y" secondAttribute="bottom" id="NFj-KK-iE9"/>
+                <constraint firstAttribute="trailing" secondItem="0UJ-dq-R3Y" secondAttribute="trailing" id="mjF-E2-fZH"/>
+                <constraint firstItem="tq2-jJ-go9" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="uiz-TX-d8i"/>
+                <constraint firstItem="XuU-NE-lVs" firstAttribute="bottom" secondItem="gTV-IL-0wX" secondAttribute="centerY" constant="-2" id="vgh-VT-dHG"/>
+                <constraint firstItem="XuU-NE-lVs" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="wgY-4v-0GR"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="SEy-5g-ep8"/>
+            <size key="customSize" width="94" height="70"/>
+            <connections>
+                <outlet property="img" destination="XuU-NE-lVs" id="oB3-9D-E61"/>
+                <outlet property="label" destination="tq2-jJ-go9" id="X9P-o4-vvi"/>
+            </connections>
+            <point key="canvasLocation" x="88" y="121.4392803598201"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="5_0.7" width="21" height="21"/>
+    </resources>
 </document>
