--- a/Beehive/Classes/Modules/Home/Redpacket/Controller/LLRedpacketDetailsViewController.xib
+++ b/Beehive/Classes/Modules/Home/Redpacket/Controller/LLRedpacketDetailsViewController.xib
@@ -22,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Efn-AY-T1n">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="Xl7-Rh-eGp"/>
@@ -35,7 +35,7 @@
                 <constraint firstItem="Efn-AY-T1n" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="8mg-hV-Wd5"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="Efn-AY-T1n" secondAttribute="trailing" id="COY-4B-lEi"/>
                 <constraint firstItem="Efn-AY-T1n" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="MxY-gz-Vwk"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="Efn-AY-T1n" secondAttribute="bottom" id="Uhd-lh-BXW"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="Efn-AY-T1n" secondAttribute="bottom" constant="49" id="Uhd-lh-BXW"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
         </view>
