--- a/Beehive/Classes/Modules/Home/Redpacket/View/LLRedpacketDetailsHeaderView.xib
+++ b/Beehive/Classes/Modules/Home/Redpacket/View/LLRedpacketDetailsHeaderView.xib
@@ -213,11 +213,26 @@
                                 <constraint firstAttribute="width" constant="11" id="a8J-R3-uvC"/>
                             </constraints>
                         </imageView>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="7r9-Oe-tpl">
+                            <rect key="frame" x="10" y="59.5" width="334" height="40"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="SSy-bk-znK"/>
+                            </constraints>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JPC-7X-0LV">
+                                <size key="itemSize" width="50" height="50"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="LAs-Ld-sq8" secondAttribute="trailing" id="3Iv-cM-ljp"/>
                         <constraint firstAttribute="trailing" secondItem="hE3-0s-ErM" secondAttribute="trailing" constant="10" id="6kk-YP-x6s"/>
+                        <constraint firstItem="VZT-Fs-QZ3" firstAttribute="centerY" secondItem="7r9-Oe-tpl" secondAttribute="centerY" id="Hpe-VW-mYY"/>
+                        <constraint firstItem="VZT-Fs-QZ3" firstAttribute="leading" secondItem="7r9-Oe-tpl" secondAttribute="trailing" constant="10" id="ICz-GR-NT6"/>
                         <constraint firstAttribute="trailing" secondItem="VZT-Fs-QZ3" secondAttribute="trailing" constant="10" id="KGp-6s-mxK"/>
                         <constraint firstItem="S3s-8q-moz" firstAttribute="leading" secondItem="dkR-PZ-5RQ" secondAttribute="leading" id="NoD-AD-QZ2"/>
                         <constraint firstItem="hE3-0s-ErM" firstAttribute="leading" secondItem="dkR-PZ-5RQ" secondAttribute="leading" constant="10" id="Uh0-6A-LS6"/>
@@ -225,6 +240,7 @@
                         <constraint firstAttribute="height" constant="106" id="dgk-zM-eOB"/>
                         <constraint firstItem="LAs-Ld-sq8" firstAttribute="top" secondItem="dkR-PZ-5RQ" secondAttribute="top" id="i8a-JP-grD"/>
                         <constraint firstItem="S3s-8q-moz" firstAttribute="top" secondItem="hE3-0s-ErM" secondAttribute="bottom" id="iIy-mO-Meb"/>
+                        <constraint firstItem="7r9-Oe-tpl" firstAttribute="leading" secondItem="dkR-PZ-5RQ" secondAttribute="leading" constant="10" id="oHq-cs-Cli"/>
                         <constraint firstItem="LAs-Ld-sq8" firstAttribute="leading" secondItem="dkR-PZ-5RQ" secondAttribute="leading" id="ovk-Uf-BIA"/>
                         <constraint firstAttribute="bottom" secondItem="VZT-Fs-QZ3" secondAttribute="bottom" constant="21" id="q0s-ej-5O6"/>
                         <constraint firstItem="hE3-0s-ErM" firstAttribute="top" secondItem="LAs-Ld-sq8" secondAttribute="bottom" id="zt8-AI-HSe"/>
@@ -240,7 +256,7 @@
                                 <constraint firstAttribute="height" constant="8" id="6AG-kW-xyh"/>
                             </constraints>
                         </imageView>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HoM-ut-giG">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HoM-ut-giG" customClass="LLSegmentedHeadView">
                             <rect key="frame" x="0.0" y="8" width="375" height="40"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
@@ -301,10 +317,13 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="Bgu-cy-psf"/>
             <connections>
+                <outlet property="acceptRedLabel" destination="3Ba-8F-Zqu" id="lax-4r-WeV"/>
                 <outlet property="acceptView" destination="eZS-sW-6Jl" id="71E-SX-Sv1"/>
                 <outlet property="acceptViewConstraintH" destination="67y-iM-igh" id="2sV-zb-DIy"/>
+                <outlet property="adsImageView" destination="cnN-gZ-iTA" id="aOX-Nd-H7t"/>
                 <outlet property="adsView" destination="NOn-YI-YZx" id="mSy-RH-Vl6"/>
                 <outlet property="adsViewConstraintH" destination="80w-ZS-gRC" id="CNy-hG-equ"/>
+                <outlet property="allowCollectionView" destination="7r9-Oe-tpl" id="fxL-gc-bO1"/>
                 <outlet property="allowView" destination="dkR-PZ-5RQ" id="pSh-Wy-C8Q"/>
                 <outlet property="allowViewConstraintH" destination="dgk-zM-eOB" id="h3E-XE-gjs"/>
                 <outlet property="avatarImageView" destination="hHQ-Vg-jgM" id="4bv-NM-A2E"/>
@@ -314,6 +333,7 @@
                 <outlet property="likeCountLabel" destination="B5o-jk-wXV" id="4Mw-dM-Aj7"/>
                 <outlet property="nickNameLabel" destination="Dil-RR-qTx" id="N7z-c0-Jza"/>
                 <outlet property="redPriceLabel" destination="mxO-Fb-pNv" id="27n-Cu-ULp"/>
+                <outlet property="segmentedHeadView" destination="HoM-ut-giG" id="sHC-kL-8q2"/>
                 <outlet property="sexImageView" destination="yw3-aV-OhP" id="lKB-Fi-aL2"/>
                 <outlet property="timeLabel" destination="ssM-0G-6g9" id="8nP-lV-e6w"/>
             </connections>
@@ -321,7 +341,7 @@
         </view>
     </objects>
     <resources>
-        <image name="1_6_1.1" width="27" height="24"/>
+        <image name="1_6_1.1" width="27" height="24.5"/>
         <image name="app_cell_right_icon" width="11" height="11"/>
         <image name="message_like_n_icon" width="13" height="13"/>
         <image name="user_sex_man" width="11" height="11"/>
